--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,26 @@
 </head>
 <body>
 
-  <!-- Register Section -->
   <div id="register-container" class="container">
     <h2>Register</h2>
+    <div class="login">
     <input type="text" id="reg-username" placeholder="Username">
     <input type="password" id="reg-password" placeholder="Password">
+  </div>
     <button onclick="registerUser()">Register</button>
     <p>Sudah punya akun? <a onclick="showLogin()">Login</a></p>
   </div>
 
-  <!-- Login Section -->
   <div id="login-container" class="container hidden">
     <h2>Login</h2>
+    <div class="login">
     <input type="text" id="login-username" placeholder="Username">
     <input type="password" id="login-password" placeholder="Password">
+  </div>
     <button onclick="loginUser()">Login</button>
     <p>Belum punya akun? <a onclick="showRegister()">Register</a></p>
   </div>
 
-  <!-- Task Management -->
   <div id="task-container" class="hidden">
     <nav class="navbar">
       <h3><i class="fa-solid fa-tasks"></i> Manajemen Tugas</h2>
@@ -75,26 +76,24 @@
     </div>
   </div>
 
-  <!-- Modal Edit Tugas -->
-  <div id="editModal" class="modal hidden">
-    <div class="modal-content">
-      <h3>Edit Tugas</h3>
-      <input type="text" id="edit-title" placeholder="Judul Tugas">
-      <select id="edit-category">
-        <option value="Kuliah">Kuliah</option>
-        <option value="Organisasi">Organisasi</option>
-        <option value="Pribadi">Pribadi</option>
-      </select>
-      <input type="date" id="edit-deadline">
-      <select id="edit-status">
-        <option value="Belum Selesai">Belum Selesai</option>
-        <option value="Selesai">Selesai</option>
-      </select>
-      <button onclick="updateTask()">Simpan</button>
-      <button onclick="closeModal()">Batal</button>
-      
-    </div>
+<div id="editModal" class="modal hidden">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <h3>Edit Tugas</h3>
+    <input type="text" id="edit-title" placeholder="Judul Tugas">
+    <select id="edit-category">
+      <option value="Kuliah">Kuliah</option>
+      <option value="Organisasi">Organisasi</option>
+      <option value="Pribadi">Pribadi</option>
+    </select>
+    <input type="date" id="edit-deadline">
+    <select id="edit-status">
+      <option value="Belum Selesai">Belum Selesai</option>
+      <option value="Selesai">Selesai</option>
+    </select>
+    <button onclick="updateTask()">Simpan</button>
   </div>
+</div>
 
   <script src="script.js"></script>
 </body>
